unpackaged/main/default/objects/Product2/fields/Alarme__c.field-meta.xml
<CustomField>
    <fullName>Alarme__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alarme</label>
    <type>Checkbox</type>
</CustomField>