unpackaged/main/default/objects/Product2/fields/Alimentation__c.field-meta.xml
<CustomField>
    <fullName>Alimentation__c</fullName>
    <label>Alimentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>380 V Tri + Terre + Neutre - 32 A - 12 kW</fullName>
            </value>
            <value>
                <fullName>380 V + T32 A + 220 V 16 A</fullName>
            </value>
            <value>
                <fullName>230 V Mono - 32 A</fullName>
            </value>
            <value>
                <fullName>380 V Tri + Terre + Neutre - 16 A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>