unpackaged/main/default/objects/Product2/fields/Block_Price__c.field-meta.xml
<CustomField>
    <fullName>Block_Price__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Block Price</label>
    <referenceTo>SBQQ__BlockPrice__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>