unpackaged/main/default/objects/Product2/fields/Caracteristiques__c.field-meta.xml
<CustomField>
    <fullName>Caracteristiques__c</fullName>
    <label>Caracteristiques</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parc (+ 5ans)</fullName>
            </value>
            <value>
                <fullName>Neuf (- 5ans)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>