unpackaged/main/default/objects/Product2/fields/Container_Temperature__c.field-meta.xml
<CustomField>
    <fullName>Container_Temperature__c</fullName>
    <label>Container Temperature</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Temperatures</valueSetName>
    </valueSet>
</CustomField>