unpackaged/main/default/objects/Product2/fields/Delivery_Site__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Site__c</fullName>
    <label>Delivery Site</label>
    <type>TextArea</type>
</CustomField>