unpackaged/main/default/objects/Product2/fields/Door_Type__c.field-meta.xml
<CustomField>
    <fullName>Door_Type__c</fullName>
    <label>Door Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Door_Type</valueSetName>
    </valueSet>
</CustomField>