unpackaged/main/default/objects/Product2/fields/Euro_Palette_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Euro_Palette_Capacity__c</fullName>
    <label>Euro Palette Capacity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Euro_Palette_Capacity</valueSetName>
    </valueSet>
</CustomField>