unpackaged/main/default/objects/Product2/fields/Euro_Palette_Tech__c.field-meta.xml
<CustomField>
    <fullName>Euro_Palette_Tech__c</fullName>
    <formula>value(text( Euro_Palette_Capacity__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Euro Palette Tech</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>