unpackaged/main/default/objects/Product2/fields/Exclude_For_Container__c.field-meta.xml
<CustomField>
    <fullName>Exclude_For_Container__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates this product should not be used for container.</inlineHelpText>
    <label>Exclude For Container</label>
    <type>Checkbox</type>
</CustomField>