unpackaged/main/default/objects/Product2/fields/External_Dimensions__c.field-meta.xml
<CustomField>
    <fullName>External_Dimensions__c</fullName>
    <label>Dimensions extérieures</label>
    <length>255</length>
    <type>Text</type>
</CustomField>