unpackaged/main/default/objects/Product2/fields/Gamme__c.field-meta.xml
<CustomField>
    <fullName>Gamme__c</fullName>
    <label>Gamme</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Special</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Maxi-Special</fullName>
            </value>
            <value>
                <fullName>-70ºC</fullName>
            </value>
            <value>
                <fullName>Option</fullName>
            </value>
            <value>
                <fullName>Option assemblage</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
            <value>
                <fullName>Hors Standard</fullName>
            </value>
            <value>
                <fullName>Divers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>