unpackaged/main/default/objects/Product2/fields/Inner_Dimension__c.field-meta.xml
<CustomField>
    <fullName>Inner_Dimension__c</fullName>
    <label>Dimensions intérieures</label>
    <length>255</length>
    <type>Text</type>
</CustomField>