unpackaged/main/default/objects/Product2/fields/Interior__c.field-meta.xml
<CustomField>
    <fullName>Interior__c</fullName>
    <label>Interior</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>