unpackaged/main/default/objects/Product2/fields/Internal_Description__c.field-meta.xml
<CustomField>
    <fullName>Internal_Description__c</fullName>
    <label>Description interne</label>
    <length>131</length>
    <type>Text</type>
</CustomField>