unpackaged/main/default/objects/Product2/fields/Manual_Billing_required__c.field-meta.xml
<CustomField>
    <fullName>Manual_Billing_required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Billing required</label>
    <type>Checkbox</type>
</CustomField>