unpackaged/main/default/objects/Product2/fields/OrderCreation__c.field-meta.xml
<CustomField>
    <fullName>OrderCreation__c</fullName>
    <label>OrderCreation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Same Order</fullName>
                <default>true</default>
                <label>Same Order</label>
            </value>
            <value>
                <fullName>Splitted Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>