unpackaged/main/default/objects/Product2/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <label>Charge utile</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>