unpackaged/main/default/objects/Product2/fields/PF_Type_de_prestations__c.field-meta.xml
<CustomField>
    <fullName>PF_Type_de_prestations__c</fullName>
    <description>This field has been created to capture the type of product</description>
    <label>Type de prestations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Autres prestations</fullName>
            </value>
            <value>
                <fullName>Caution</fullName>
            </value>
            <value>
                <fullName>Indemnités de résiliation</fullName>
            </value>
            <value>
                <fullName>Lavage</fullName>
            </value>
            <value>
                <fullName>Loyer</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Manutention</fullName>
            </value>
            <value>
                <fullName>Options</fullName>
            </value>
            <value>
                <fullName>Remise en état</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>