unpackaged/main/default/objects/Product2/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A quai</fullName>
            </value>
            <value>
                <fullName>Au sol</fullName>
            </value>
            <value>
                <fullName>En intérieur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>