unpackaged/main/default/objects/Product2/fields/Presence_Assemblage__c.field-meta.xml
<CustomField>
    <fullName>Presence_Assemblage__c</fullName>
    <label>Présence Assemblage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>