unpackaged/main/default/objects/Product2/fields/PriceDependentParent__c.field-meta.xml
<CustomField>
    <fullName>PriceDependentParent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prix dépendant parent</label>
    <type>Checkbox</type>
</CustomField>