unpackaged/main/default/objects/Product2/fields/Product_ExtID__c.field-meta.xml
<CustomField>
    <fullName>Product_ExtID__c</fullName>
    <externalId>true</externalId>
    <label>Product ExtID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>