unpackaged/main/default/objects/Product2/fields/Product_Weight_and_Nature__c.field-meta.xml
<CustomField>
    <fullName>Product_Weight_and_Nature__c</fullName>
    <label>Product Weight and Nature</label>
    <type>TextArea</type>
</CustomField>