unpackaged/main/default/objects/Product2/fields/Protection__c.field-meta.xml
<CustomField>
    <fullName>Protection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Protection</label>
    <type>Checkbox</type>
</CustomField>