unpackaged/main/default/objects/Product2/fields/Rideau_a_laniere__c.field-meta.xml
<CustomField>
    <fullName>Rideau_a_laniere__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rideau à lanière</label>
    <type>Checkbox</type>
</CustomField>