unpackaged/main/default/objects/Product2/fields/SBQQ__AssetAmendmentBehavior__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__AssetAmendmentBehavior__c</fullName>
    <description>Indicates how assets representing this product behave on amendments.</description>
    <inlineHelpText>Sélectionnez un comportement lors de l&#39;amendement des ressources qui représentent de produit. Par défaut, les quantités de ressources ne peuvent pas diminuer, sauf si une mise à niveau est ajoutée, et aucun remboursement n&#39;est appliqué.</inlineHelpText>
    <label>Asset Amendment Behavior</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
                <default>true</default>
                <label>Default</label>
            </value>
            <value>
                <fullName>Allow Refund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>