unpackaged/main/default/objects/Product2/fields/SBQQ__BatchQuantity__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__BatchQuantity__c</fullName>
    <description>Quantity in one batch for products sold in batches. Quantity entered in quote line will be divided by this number.</description>
    <inlineHelpText>Une valeur non vide indique que ce produit est vendu par lots. Saisissez la quantité de chaque lot. La quantité saisie dans le devis est divisée par cette valeur et arrondie à l&#39;entier le plus proche.</inlineHelpText>
    <label>Batch Quantity</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>