unpackaged/main/default/objects/Product2/fields/SBQQ__Component__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Component__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks this product as a component, excluding it from selection in product lookup.</description>
    <inlineHelpText>Marque ce produit en tant que composant, ce qui l&#39;exclut de la sélection dans la référence produit.</inlineHelpText>
    <label>Component</label>
    <type>Checkbox</type>
</CustomField>