unpackaged/main/default/objects/Product2/fields/SBQQ__ConfigurationEvent__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__ConfigurationEvent__c</fullName>
    <description>Specifies when user is prompted to configure this product.</description>
    <inlineHelpText>Utilisez ces options pour contrôler l&#39;affichage de l&#39;écran Configurer les produits pour ce produit. Sélectionnez « Ajouter » pour limiter l&#39;affichage à la configuration initiale, ou « Modifier » pour l&#39;afficher lors des configurations successives.</inlineHelpText>
    <label>Configuration Event</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SBQQ__ConfigurationType__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Always</fullName>
            </value>
            <value>
                <fullName>Add</fullName>
            </value>
            <value>
                <fullName>Edit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>