unpackaged/main/default/objects/Product2/fields/SBQQ__ExcludeFromMaintenance__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__ExcludeFromMaintenance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Excludes this product from percent of total maintenance calculations.</description>
    <inlineHelpText>Sélectionnez cette case pour toujours exclure ce produit des calculs de pourcentage du total (normalement, les produits sans abonnement sont inclus dans les calculs de pourcentage du total).</inlineHelpText>
    <label>Exclude From Percent Of Total</label>
    <type>Checkbox</type>
</CustomField>