unpackaged/main/default/objects/Product2/fields/SBQQ__ExternallyConfigurable__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__ExternallyConfigurable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, indicates that configuring this Product automatically launches the External Configuration URL, defined in Salesforce CPQ settings.</description>
    <inlineHelpText>Lorsqu&#39;elle est cochée, cette case indique que la configuration automatique de ce produit lance l&#39;URL de configuration externe, définie dans les paramètres de Salesforce CPQ.</inlineHelpText>
    <label>Externally Configurable</label>
    <type>Checkbox</type>
</CustomField>