unpackaged/main/default/objects/Product2/fields/SBQQ__HidePriceInSearchResults__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__HidePriceInSearchResults__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the product price should be displayed in the Product Search Results.</description>
    <inlineHelpText>Sélectionnez cette case pour masquer le prix de ce produit dans les résultats de recherche de produits.</inlineHelpText>
    <label>Hide Price in Search Results</label>
    <type>Checkbox</type>
</CustomField>