unpackaged/main/default/objects/Product2/fields/SBQQ__NewQuoteGroup__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__NewQuoteGroup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Forces this product to be in its own group on a quote.</description>
    <inlineHelpText>Sélectionnez cette case pour créer un groupe de devis lors de l&#39;ajout de ce produit (sauf si le groupe actuel est vide).</inlineHelpText>
    <label>New Quote Group</label>
    <type>Checkbox</type>
</CustomField>