unpackaged/main/default/objects/Product2/fields/SBQQ__Optional__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Optional__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this product is optional or not by default. Optional products don&#39;t contribute to quote total or get transferred to the opportunity.</description>
    <inlineHelpText>Sélectionnez cette case si ce produit est facultatif par défaut. Les produits facultatifs ne contribuent pas au total du devis et ne sont pas transférés vers l&#39;opportunité.</inlineHelpText>
    <label>Optional</label>
    <type>Checkbox</type>
</CustomField>