unpackaged/main/default/objects/Product2/fields/SBQQ__OptionSelectionMethod__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__OptionSelectionMethod__c</fullName>
    <description>Determines how user selects options attached to this product. &quot;Click&quot; method presents options with checkboxes next to them. &quot;Add&quot; renders a button which brings up a dialog box with available options.</description>
    <inlineHelpText>Détermine comment l&#39;utilisateur sélectionne les options jointes à ce produit. « Cliquer » présente les options avec des cases à cocher en regard. « Ajouter » affiche un bouton qui ouvre une boîte de dialogue contenant les options disponibles.</inlineHelpText>
    <label>Option Selection Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Click</fullName>
                <default>true</default>
                <label>Click</label>
            </value>
            <value>
                <fullName>Add</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>