unpackaged/main/default/objects/Product2/fields/SBQQ__PricingMethodEditable__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__PricingMethodEditable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies whether Pricing Method may be changed when this product is added to quote.</description>
    <inlineHelpText>Sélectionnez cette case si la méthode de tarification peut être modifiée lors de l&#39;ajout de ce produit au devis.</inlineHelpText>
    <label>Pricing Method Editable</label>
    <type>Checkbox</type>
</CustomField>